--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-*,html,body {
+*,
+html,
+body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -104,6 +106,7 @@ li {
   align-items: center;
 }
 /*****header****/
+
 .header {
   width: 100%;
   position: relative;
@@ -116,38 +119,13 @@ li {
   width: 100%;
   height:400px
 }
-.bck-grnd-header {
-  background-image: url("./image/header2.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100%;
-  height:400px
 
-}
-.bck-grnd-header img {
-  width: 100%;
-}
-.new-to-udemy {
-  padding: 20px;
-}
-
-
-
-.new-to-udemy .title {
-  font-size: 30px;
-}
-
-@media only screen and (min-width: 700px) {
-  .new-to-udemy {
-    position: absolute;
-    top: 15%;
-    left: 5%;
-    background-color: white;
-    box-shadow: 1px 5px 10px 0px rgb(219, 219, 219);
-    width: 21em;
+@media (max-width: 100px) {
+  .alarm {
+      background-image: url(./image/udemy-alarm.jpg);
   }
 }
+
 
 /***** courses *****/
 
