--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ li {
 }
 
 /******* nav ********/
+.special{
+  text-decoration: none;
+  color: black;
+}
 .nav-bar {
   box-shadow: 0px 5px 5px 1px rgb(182, 182, 182);
 }
@@ -191,6 +195,10 @@ li {
 .lst-courses{
   display: flex;
   flex-wrap: wrap;
+  gap: 2.5rem;
+  flex-direction: row;
+  margin-right: 0%;
+  margin-left: 0%;
 }
 .card-img img{
   width:100%;
@@ -199,6 +207,8 @@ li {
 .card{
   width:249px;
   margin:0 5px;
+  justify-content: space-between;
+  flex-direction: row;
 }
 .card-info div{
   padding:5px 0 0 0;
@@ -225,16 +235,24 @@ li {
   }
 }
 
+@media only screen and (max-width: 925px) {
+  .special{
+    display: none;
+  }
+}
 
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 640px) {
   .nav-bar ul {
     justify-content: space-between;
   }
-  .nav-lst {
+  .nav-lst .search-bar-form , .category{
     display: none;
+    flex: wrap;
+    font-size: auto;
   }
-  .logo,.bars {
+  .logo,
+  .bars {
     display: block;
   }
   .hder-of-courses-section{
@@ -246,11 +264,10 @@ li {
     background-position: center;
     background-repeat: no-repeat;
     width: 100%;
-    height:400px;
-  }
-}
-@media only screen and (min-width: 1700px) {
-  .back-ground-header {
     height:600px;
   }
 }
+
+
+
+
